Ensure that map does not break the metadata layout fixes #1787

--- a/app/assets/stylesheets/modules/blacklight_overrides.scss
+++ b/app/assets/stylesheets/modules/blacklight_overrides.scss
@@ -108,11 +108,3 @@
     }
   }
 }
-
-dt.blacklight-geographic_srpt {
-  display: none;
-}
-
-dd.blacklight-geographic_srpt {
-  margin-left: 0;
-}
